# lvgl-template-esp32

./: CMakeLists.txt  README.md  sdkconfig.default
components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.h  ili9341.h
main/: CMakeLists.txt  main.cpp  main.h
main/gui_task/: gui_funciones.c  gui_funciones.h  gui_task.c  gui_task.h
